# btcpp-ros2-example

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  makefile
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
ros2_ws/: Makefile
ros2_ws/src/actions/action_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/actions/action_interfaces/action/: IsFrontClear.action  Move.action  Print.action  Runtime.action
ros2_ws/src/actions/actions_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/actions/actions_cpp/include/actions_cpp/get_runtime/: get_runtime.hpp
ros2_ws/src/actions/actions_cpp/include/actions_cpp/is_front_clear/: is_front_clear.hpp
ros2_ws/src/actions/actions_cpp/include/actions_cpp/move/: move.hpp
ros2_ws/src/actions/actions_cpp/include/actions_cpp/print/: print.hpp
ros2_ws/src/actions/actions_cpp/launch/: action_server.launch.py
ros2_ws/src/actions/actions_cpp/src/get_runtime/: get_runtime.cpp  get_runtime_server.cpp
ros2_ws/src/actions/actions_cpp/src/is_front_clear/: is_front_clear.cpp  is_front_clear_server.cpp
ros2_ws/src/actions/actions_cpp/src/move/: move.cpp  move_server.cpp
ros2_ws/src/actions/actions_cpp/src/print/: print.cpp  print_server.cpp
ros2_ws/src/actions/actions_py/: package.xml  pyrightconfig.json  setup.py
ros2_ws/src/actions/actions_py/actions_py/: print_action_server.py
ros2_ws/src/actions/actions_py/launch/: action_server.launch.py
ros2_ws/src/bringup/: package.xml  setup.py
ros2_ws/src/bringup/launch/: bringup.launch.py
ros2_ws/src/control/control_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/control/control_cpp/include/control_cpp/select_random/: select_random.hpp
ros2_ws/src/control/control_cpp/src/select_random/: select_random.cpp
ros2_ws/src/coordinator/: CMakeLists.txt  package.xml
ros2_ws/src/coordinator/launch/: coordinator.launch.py
ros2_ws/src/coordinator/src/: coordinator.cpp
ros2_ws/src/coordinator/trees/: complex_example_main.xml  example_main.xml
ros2_ws/src/decorator/decorator_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/decorator/decorator_cpp/include/decorator_cpp/random_delay/: random_delay.hpp
ros2_ws/src/decorator/decorator_cpp/src/random_delay/: random_delay.cpp
ros2_ws/src/tools/: Makefile  makefile
ros2_ws/src/webots/robot_supervisor/: CMakeLists.txt  package.xml
ros2_ws/src/webots/robot_supervisor/include/robot_supervisor/: robot_supervisor.hpp
ros2_ws/src/webots/robot_supervisor/launch/: robot_supervisor.launch.py
ros2_ws/src/webots/robot_supervisor/src/: robot_supervisor.cpp
ros2_ws/src/webots/worlds/: .gitignore  test_world.wbt
