<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coordinator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="antonkesy@gmail.com">ak</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>actions_cpp</depend>
  <depend>actions_py</depend>
  <depend>decorator_cpp</depend>
  <depend>control_cpp</depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
