<package format="3">
  <name>action_interfaces</name>
  <version>0.2.0</version>
  <description>
    Example action interfaces
  </description>

  <maintainer email="antonkesy@gmail.com">Anton Kesy</maintainer>
  <license>MIT</license>
  <author>Anton Kesy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
