<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>actions_py</name>
  <version>0.15.1</version>
  <description>Examples action servers using rclpy.</description>
  <maintainer email="antonkesy@gmail.com">Anton Kesy</maintainer>
  <license>MIT</license>

  <exec_depend>action_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
